--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "darkaonline/l5-swagger": "^8.6",
         "davejamesmiller/laravel-breadcrumbs": "^5.3",
         "laravel/framework": "^11.0",
         "laravel/jetstream": "^5.1",
