--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^8.2",
         "darkaonline/l5-swagger": "^8.6",
         "davejamesmiller/laravel-breadcrumbs": "^5.3",
+        "kreait/firebase-php": "7.15",
         "laravel/framework": "^11.0",
         "laravel/jetstream": "^5.1",
         "laravel/reverb": "@beta",
